@@ -34,6 +34,7 @@ v.0.5dev (ongoing development)
  + curses driver: new option DrawBorder (Bruno Schwander)
  * avoid sending duplicate "success" messages in response to menu_add_item
  + lcdexec: parameter support using widgets; hidden behind compile time option
+ * server core: display values in menu for all input MenuEntry types
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
